cambio ruta banner

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ li a:hover {
 }
 
 .contenedor-imagen-fondo {
-    background-image: url(../images/desktop/image-hero.jpg);
+    background-image: url(images/desktop/image-hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
