--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 :root {
     --color-letra: white;
-    --font-family-letra: "Alata", sans-serif;
-
+    --font-family-letra-uno: "Alata", sans-serif;
+    --font-family-letra-dos: "Josefin Sans", sans-serif;
 }
 
 * {
@@ -17,14 +17,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     background-color: transparent;
-    /* position: absolute;
-    top: 0; */
     width: 100%;
-    /* z-index: 10;
-    padding: 40px 80px;
-    left: 10%; */
     padding: 0 9%;
-
 }
 
 ul {
@@ -36,9 +30,8 @@ ul {
 
 li a {
     text-decoration: none;
-    color: #ffffff;
-    font-family: var(--font-family-letra);
-
+    color: var(--color-letra);
+    font-family: var(--font-family-letra-uno);
 }
 
 li a:hover {
@@ -52,13 +45,13 @@ li a:hover {
     background-position: center;
     width: 100%;
     padding: 100px 20px;
-    color: white;
+    color: var(--color-letra);
     position: relative;
     height: 100vh;
 }
 
 .contenedor-texto-tit {
-    border: 1px solid #ffff;
+    border: 1px solid var(--color-letra);
     padding: 20px;
     position: absolute;
     top: 40%;
@@ -67,14 +60,12 @@ li a:hover {
 }
 
 h1.titulo-banner {
-    font-size: 56px;
+    font-size: 48px;
     line-height: 1.3;
     font-weight: 200;
-   font-family: "Josefin Sans", sans-serif;
+    font-family: var(--font-family-letra-dos);
     width: 60%;
 }
-
-
 
 .hamburger-menu {
     display: none;
@@ -86,14 +77,12 @@ h1.titulo-banner {
 .hamburger-menu .bar {
     width: 25px;
     height: 3px;
-    background-color: white;
+    background-color: var(--color-letra);
     margin: 4px 0;
     transition: 0.4s;
 }
 
-
-
-@media (max-width:768px) {
+@media (max-width: 768px) {
     .hamburger-menu {
         display: flex;
     }
@@ -115,8 +104,6 @@ h1.titulo-banner {
         flex-direction: column;
         width: 100%;
         position: absolute;
-        /* top: 100px; */
-        /* left: 0; */
         z-index: 1000;
     }
 
@@ -124,90 +111,86 @@ h1.titulo-banner {
         display: flex;
     }
 
-      nav li {
-    margin: 0;
-    padding: 1rem;
-    text-align: center;
-    border-bottom: 1px solid #333;
-  }
+    nav li {
+        margin: 0;
+        padding: 1rem;
+        text-align: center;
+        border-bottom: 1px solid #333;
+    }
 }
-
 
 /* SEC IMAGEN ------------ */
 
 .contenedor-seccion-informativa {
-  margin: 0 auto;
-  padding: 7rem;
-  position: relative;
-  display: flex;
+    margin: 0 auto;
+    padding: 7rem;
+    position: relative;
+    display: flex;
 }
 
 .cont-background-imagen {
-  background-image: url("images/desktop/image-interactive.jpg");
-  max-width: 731px;
-  width: 100%;
-  height: 500px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: left;
-  padding: 2rem;
-  flex: 50%;
+    background-image: url("images/desktop/image-interactive.jpg");
+    max-width: 731px;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left;
+    padding: 2rem;
+    flex: 50%;
 }
 
 .cont-texto-informativo {
     display: flex;
     flex-direction: column;
-  position: absolute;
-  /* border: 1px solid red; */
-  padding: 6rem;
-  flex: 50%;
-  left: 40%;
-  right: 16%;
-  top: 48%;
-  text-align: left;
-  background: #ffffff;
-  text-align: start;
-  gap: 10px;
+    position: absolute;
+    padding: 6rem;
+    flex: 50%;
+    left: 40%;
+    right: 16%;
+    top: 48%;
+    text-align: start;
+    background: #ffffff;
+    gap: 10px;
 }
 
 .cont-texto-informativo h2 {
-    font-family: "Josefin Sans", sans-serif;
-  font-weight: 300;
-  font-size: 40px;
-  opacity: 0.8;
+    font-family: var(--font-family-letra-dos);
+    font-weight: 300;
+    font-size: 40px;
+    opacity: 0.8;
 }
 
 .cont-texto-informativo p {
-  font-family: "Alata";
-  opacity: 0.6;
-  line-height: 25px;
+    font-family: var(--font-family-letra-uno);
+    opacity: 0.6;
+    line-height: 25px;
 }
 
 @media (max-width: 768px) {
-  .contenedor-seccion-informativa {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    justify-content: center;
-    align-items: center;
-  }
+    .contenedor-seccion-informativa {
+        flex-direction: column;
+        padding: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
 
-  .cont-background-imagen {
-    padding: 8rem;
-  }
-  .cont-texto-informativo {
-    position: static;
-    padding: 1rem;
-    text-align: center;
-  }
+    .cont-background-imagen {
+        padding: 8rem;
+    }
 
-  .cont-texto-informativo h2 {
-    font-size: 33px;
-  }
+    .cont-texto-informativo {
+        position: static;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .cont-texto-informativo h2 {
+        font-size: 33px;
+    }
 }
 
 /* CARDS----------------- */
-
 
 .contenedor-seccion-cards {
     padding: 7rem;
@@ -224,42 +207,36 @@ h1.titulo-banner {
 }
 
 .contenedor-seccion-cards h2 {
-    font-family: "Josefin Sans", sans-serif;
-
+    font-family: var(--font-family-letra-dos);
     font-weight: 300;
     font-size: 40px;
 }
 
 .boton-ver-mas-card a {
-    font-family: "Josefin Sans", sans-serif;
-
-
+    font-family: var(--font-family-letra-dos);
     text-decoration: none;
     color: black;
     border: 2px solid black;
     padding: 0.4rem 2rem;
-
 }
 
-.cont-cards{
+.cont-cards {
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-gap: 20px;
-
 }
 
 .card h3 {
     font-size: 30px;
-    color: white;
-    font-family: "Josefin Sans", sans-serif;
+    color: var(--color-letra);
+    font-family: var(--font-family-letra-dos);
     font-weight: 200;
     width: 50%;
-
 }
 
 .card {
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     max-width: 256px;
     height: 450px;
@@ -269,39 +246,16 @@ h1.titulo-banner {
     padding: 1rem;
 }
 
-.card:nth-child(1) {
-    background-image: url('images/desktop/image-deep-earth.jpg');
-}
+.card:nth-child(1) { background-image: url('images/desktop/image-deep-earth.jpg'); }
+.card:nth-child(2) { background-image: url('images/desktop/image-night-arcade.jpg'); }
+.card:nth-child(3) { background-image: url('images/desktop/image-soccer-team.jpg'); }
+.card:nth-child(4) { background-image: url('images/desktop/image-grid.jpg'); }
+.card:nth-child(5) { background-image: url('images/desktop/image-from-above.jpg'); }
+.card:nth-child(6) { background-image: url('images/desktop/image-pocket-borealis.jpg'); }
+.card:nth-child(7) { background-image: url('images/desktop/image-curiosity.jpg'); }
+.card:nth-child(8) { background-image: url('images/desktop/image-fisheye.jpg'); }
 
-.card:nth-child(2) {
-    background-image: url('images/desktop/image-night-arcade.jpg');
-}
-
-.card:nth-child(3) {
-    background-image: url('images/desktop/image-soccer-team.jpg');
-}
-
-.card:nth-child(4) {
-    background-image: url('images/desktop/image-grid.jpg');
-}
-
-.card:nth-child(5) {
-    background-image: url('images/desktop/image-from-above.jpg');
-}
-
-.card:nth-child(6) {
-    background-image: url('images/desktop/image-pocket-borealis.jpg');
-}
-
-.card:nth-child(7) {
-    background-image: url('images/desktop/image-curiosity.jpg');
-}
-
-.card:nth-child(8) {
-    background-image: url('images/desktop/image-fisheye.jpg');
-}
 /* FOOTER ---------------------------*/
-
 
 .footer {
     background-color: black;
@@ -311,7 +265,6 @@ h1.titulo-banner {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /* max-width: 1200px; */
     margin: 0 auto;
     padding: 2rem;
     flex-direction: row;
@@ -329,10 +282,9 @@ ul.listado-op {
 }
 
 ul.listado-op li a {
-    list-style: none;
     color: var(--color-letra);
     text-decoration: none;
-    font-family: var(--font-family-letra);
+    font-family: var(--font-family-letra-uno);
     font-weight: 400;
     font-style: normal;
 }
@@ -340,7 +292,6 @@ ul.listado-op li a {
 ul.listado-op li a:hover {
     border-bottom: 2px solid #872d8c;
 }
-
 
 .cont-der-footer {
     display: flex;
@@ -357,35 +308,16 @@ ul.listado-op li a:hover {
 
 .copyright p {
     color: var(--color-letra);
-    font-family: var(--font-family-letra);
+    font-family: var(--font-family-letra-uno);
     opacity: 0.5;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px), (max-width: 576px) {
     .cont-izq-footer {
         align-items: center;
     }
 
     ul.listado-op {
-        flex-direction: column;
-    }
-
-    .contendor-footer {
-        flex-direction: column;
-        gap: 40px;
-    }
-
-    .logos-redes {
-        justify-content: center;
-    }
-}
-
-@media (max-width:576px) {
-    .cont-izq-footer {
-        align-items: center;
-    }
-
-    .ul.listado-op {
         flex-direction: column;
     }
 
