--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav {
 ul {
     list-style: none;
     display: flex;
-    gap: 12px;
+    gap: 25px;
     align-items: center;
 }
 
@@ -44,7 +44,7 @@ li a:hover {
     background-size: cover;
     background-position: center;
     width: 100%;
-    padding: 100px 20px;
+    padding: 65px 20px;
     color: var(--color-letra);
     position: relative;
     height: 100vh;
@@ -60,63 +60,74 @@ li a:hover {
 }
 
 h1.titulo-banner {
-    font-size: 48px;
+    font-size: 45px;
     line-height: 1.3;
     font-weight: 200;
     font-family: var(--font-family-letra-dos);
     width: 60%;
 }
 
-.hamburger-menu {
+
+/* MENU HAMBURGUESA MOBILE---------- */
+
+
+.menu-hamburguesa {
     display: none;
-    flex-direction: column;
-    cursor: pointer;
-    padding: 10px;
 }
 
-.hamburger-menu .bar {
-    width: 25px;
-    height: 3px;
-    background-color: var(--color-letra);
-    margin: 4px 0;
-    transition: 0.4s;
+.labe-hamburguesa {
+    display: none;
 }
 
-@media (max-width: 768px) {
-    .hamburger-menu {
-        display: flex;
+
+@media (max-width:768px) {
+    .menu-navegador {
+        position: relative;
     }
 
-    .hamburger-menu.active .bar:nth-child(1) {
-        transform: rotate(-45deg) translate(-5px, 6px);
-    }
-
-    .hamburger-menu.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger-menu.active .bar:nth-child(3) {
-        transform: rotate(45deg) translate(-5px, -6px);
-    }
-
-    nav ul {
-        display: none;
-        flex-direction: column;
+    .nav-links {
         width: 100%;
+        background-color: black;
         position: absolute;
-        z-index: 1000;
-    }
-
-    nav ul.active {
+        top: 80px;
+        height: 100vh;
         display: flex;
+        flex-direction: column;
+        /* justify-content: end; */
+        /* align-items: end; */
+        gap: 3rem;
+        z-index: 100px;
+
+
+        transition: all .3s;
+
     }
 
-    nav li {
-        margin: 0;
-        padding: 1rem;
-        text-align: center;
-        border-bottom: 1px solid #333;
+    .li-links {}
+
+    .links {
+        font-size: 3.5rem;
+        color: red;
+        font-weight: 200;
     }
+
+    .menu-hamburguesa:checked+.ul-links {
+        height: calc(100vh - 80px);
+
+    }
+
+    .labe-hamburguesa {
+        display: block;
+    }
+
+    .list-icon {
+        color: #ffffff;
+    }
+
+    .menu-hamburguesa {
+        display: none;
+    }
+
 }
 
 /* SEC IMAGEN ------------ */
@@ -144,14 +155,15 @@ h1.titulo-banner {
     display: flex;
     flex-direction: column;
     position: absolute;
-    padding: 6rem;
+    padding: 5.5rem;
     flex: 50%;
-    left: 40%;
-    right: 16%;
+    left: 54%;
+    /* right: 10%; */
     top: 48%;
     text-align: start;
     background: #ffffff;
     gap: 10px;
+    /* border:  red 1px solid; */
 }
 
 .cont-texto-informativo h2 {
@@ -167,28 +179,7 @@ h1.titulo-banner {
     line-height: 25px;
 }
 
-@media (max-width: 768px) {
-    .contenedor-seccion-informativa {
-        flex-direction: column;
-        padding: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
 
-    .cont-background-imagen {
-        padding: 8rem;
-    }
-
-    .cont-texto-informativo {
-        position: static;
-        padding: 1rem;
-        text-align: center;
-    }
-
-    .cont-texto-informativo h2 {
-        font-size: 33px;
-    }
-}
 
 /* CARDS----------------- */
 
@@ -218,6 +209,7 @@ h1.titulo-banner {
     color: black;
     border: 2px solid black;
     padding: 0.4rem 2rem;
+    display: flex;
 }
 
 .cont-cards {
@@ -231,7 +223,7 @@ h1.titulo-banner {
     color: var(--color-letra);
     font-family: var(--font-family-letra-dos);
     font-weight: 200;
-    width: 50%;
+    width: auto;
 }
 
 .card {
@@ -246,14 +238,37 @@ h1.titulo-banner {
     padding: 1rem;
 }
 
-.card:nth-child(1) { background-image: url('images/desktop/image-deep-earth.jpg'); }
-.card:nth-child(2) { background-image: url('images/desktop/image-night-arcade.jpg'); }
-.card:nth-child(3) { background-image: url('images/desktop/image-soccer-team.jpg'); }
-.card:nth-child(4) { background-image: url('images/desktop/image-grid.jpg'); }
-.card:nth-child(5) { background-image: url('images/desktop/image-from-above.jpg'); }
-.card:nth-child(6) { background-image: url('images/desktop/image-pocket-borealis.jpg'); }
-.card:nth-child(7) { background-image: url('images/desktop/image-curiosity.jpg'); }
-.card:nth-child(8) { background-image: url('images/desktop/image-fisheye.jpg'); }
+.card:nth-child(1) {
+    background-image: url('images/desktop/image-deep-earth.jpg');
+}
+
+.card:nth-child(2) {
+    background-image: url('images/desktop/image-night-arcade.jpg');
+}
+
+.card:nth-child(3) {
+    background-image: url('images/desktop/image-soccer-team.jpg');
+}
+
+.card:nth-child(4) {
+    background-image: url('images/desktop/image-grid.jpg');
+}
+
+.card:nth-child(5) {
+    background-image: url('images/desktop/image-from-above.jpg');
+}
+
+.card:nth-child(6) {
+    background-image: url('images/desktop/image-pocket-borealis.jpg');
+}
+
+.card:nth-child(7) {
+    background-image: url('images/desktop/image-curiosity.jpg');
+}
+
+.card:nth-child(8) {
+    background-image: url('images/desktop/image-fisheye.jpg');
+}
 
 /* FOOTER ---------------------------*/
 
@@ -312,7 +327,92 @@ ul.listado-op li a:hover {
     opacity: 0.5;
 }
 
-@media (max-width: 768px), (max-width: 576px) {
+
+
+
+/* MEDIA QUERYS -------------------------------  */
+
+
+@media (max-width: 768px) {
+    .contenedor-seccion-informativa {
+        flex-direction: column;
+        padding: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cont-background-imagen {
+        padding: 8rem;
+    }
+
+    .cont-texto-informativo {
+        position: static;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .cont-texto-informativo h2 {
+        font-size: 33px;
+    }
+
+    .cont-cards {
+        grid-template-columns: auto;
+    }
+
+    .card {
+
+        max-width: 654PX;
+        height: 240px;
+    }
+
+
+    .card:nth-child(1) {
+        background-image: url('images/mobile/image-deep-earth.jpg');
+    }
+
+    .card:nth-child(2) {
+        background-image: url('images/mobile/image-night-arcade.jpg');
+    }
+
+    .card:nth-child(3) {
+        background-image: url('images/mobile/image-soccer-team.jpg');
+    }
+
+    .card:nth-child(4) {
+        background-image: url('images/mobile/image-grid.jpg');
+    }
+
+    .card:nth-child(5) {
+        background-image: url('images/mobile/image-from-above.jpg');
+    }
+
+    .card:nth-child(6) {
+        background-image: url('images/mobile/image-pocket-borealis.jpg');
+    }
+
+    .card:nth-child(7) {
+        background-image: url('images/mobile/image-curiosity.jpg');
+    }
+
+    .card:nth-child(8) {
+        background-image: url('images/mobile/image-fisheye.jpg');
+    }
+    .contenedor-seccion-cards{
+        padding: 2rem;
+    }
+    .cont-titulo-boton{
+        gap: 10px;
+    }
+
+    .contenedor-seccion-cards h2{
+        font-size: 36px;
+        text-align: center;
+    }
+}
+
+
+@media (max-width: 768px),
+(max-width: 576px) {
     .cont-izq-footer {
         align-items: center;
     }
