--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 :root {
     --color-letra: white;
-    --font-family-letra-uno: "Alata", sans-serif;
-    --font-family-letra-dos: "Josefin Sans", sans-serif;
+    --font-family-letra: "Alata", sans-serif;
 }
 
 * {
@@ -30,8 +29,8 @@ ul {
 
 li a {
     text-decoration: none;
-    color: var(--color-letra);
-    font-family: var(--font-family-letra-uno);
+    color: #ffffff;
+    font-family: var(--font-family-letra);
 }
 
 li a:hover {
@@ -39,99 +38,50 @@ li a:hover {
 }
 
 .contenedor-imagen-fondo {
-    background-image: url(images/desktop/image-hero.jpg);
+    background-image: url(../images/desktop/image-hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
-    padding: 65px 20px;
-    color: var(--color-letra);
+    padding: 70px 20px;
+    color: white;
     position: relative;
     height: 100vh;
 }
 
 .contenedor-texto-tit {
-    border: 1px solid var(--color-letra);
+    border: 1px solid #ffff;
     padding: 20px;
     position: absolute;
     top: 40%;
     left: 10%;
-    width: 47%;
+    width: auto;
+    max-width: 38%;
 }
 
 h1.titulo-banner {
-    font-size: 45px;
+    font-size: 49px;
     line-height: 1.3;
     font-weight: 200;
-    font-family: var(--font-family-letra-dos);
-    width: 60%;
+    font-family: "Josefin Sans", sans-serif;
 }
 
-
-/* MENU HAMBURGUESA MOBILE---------- */
-
-
-.menu-hamburguesa {
+.hamburger-menu {
     display: none;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 10px;
 }
 
-.labe-hamburguesa {
-    display: none;
+.hamburger-menu .bar {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 4px 0;
+    transition: 0.4s;
 }
 
-
-@media (max-width:768px) {
-    .menu-navegador {
-        position: relative;
-    }
-
-    .nav-links {
-        width: 100%;
-        background-color: black;
-        position: absolute;
-        top: 80px;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        /* justify-content: end; */
-        /* align-items: end; */
-        gap: 3rem;
-        z-index: 100px;
-
-
-        transition: all .3s;
-
-    }
-
-    .li-links {}
-
-    .links {
-        font-size: 3.5rem;
-        color: red;
-        font-weight: 200;
-    }
-
-    .menu-hamburguesa:checked+.ul-links {
-        height: calc(100vh - 80px);
-
-    }
-
-    .labe-hamburguesa {
-        display: block;
-    }
-
-    .list-icon {
-        color: #ffffff;
-    }
-
-    .menu-hamburguesa {
-        display: none;
-    }
-
-}
-
-/* SEC IMAGEN ------------ */
-
+/* SECCIÓN IMAGEN */
 .contenedor-seccion-informativa {
     margin: 0 auto;
     padding: 7rem;
@@ -144,7 +94,7 @@ h1.titulo-banner {
     max-width: 731px;
     width: 100%;
     height: 500px;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: left;
     padding: 2rem;
@@ -155,34 +105,29 @@ h1.titulo-banner {
     display: flex;
     flex-direction: column;
     position: absolute;
-    padding: 5.5rem;
+    padding: 6rem;
     flex: 50%;
     left: 54%;
-    /* right: 10%; */
     top: 48%;
-    text-align: start;
+    text-align: left;
     background: #ffffff;
     gap: 10px;
-    /* border:  red 1px solid; */
 }
 
 .cont-texto-informativo h2 {
-    font-family: var(--font-family-letra-dos);
+    font-family: "Josefin Sans", sans-serif;
     font-weight: 300;
     font-size: 40px;
     opacity: 0.8;
 }
 
 .cont-texto-informativo p {
-    font-family: var(--font-family-letra-uno);
+    font-family: "Alata";
     opacity: 0.6;
     line-height: 25px;
 }
 
-
-
-/* CARDS----------------- */
-
+/* CARDS */
 .contenedor-seccion-cards {
     padding: 7rem;
     display: flex;
@@ -198,13 +143,14 @@ h1.titulo-banner {
 }
 
 .contenedor-seccion-cards h2 {
-    font-family: var(--font-family-letra-dos);
+    font-family: "Josefin Sans", sans-serif;
     font-weight: 300;
     font-size: 40px;
 }
 
-.boton-ver-mas-card a {
-    font-family: var(--font-family-letra-dos);
+.boton-ver-mas-card-desk a,
+.boton-ver-mas-card-mobile a {
+    font-family: "Josefin Sans", sans-serif;
     text-decoration: none;
     color: black;
     border: 2px solid black;
@@ -214,64 +160,45 @@ h1.titulo-banner {
 
 .cont-cards {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
-}
-
-.card h3 {
-    font-size: 30px;
-    color: var(--color-letra);
-    font-family: var(--font-family-letra-dos);
-    font-weight: 200;
-    width: auto;
+    justify-items: center;
 }
 
 .card {
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     width: 100%;
     max-width: 256px;
     height: 450px;
     display: flex;
-    justify-content: start;
-    align-items: end;
+    justify-content: flex-start;
+    align-items: flex-end;
     padding: 1rem;
+    position: relative;
 }
 
-.card:nth-child(1) {
-    background-image: url('images/desktop/image-deep-earth.jpg');
+.card h3 {
+    font-size: 30px;
+    color: white;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 200;
 }
 
-.card:nth-child(2) {
-    background-image: url('images/desktop/image-night-arcade.jpg');
-}
+.card:nth-child(1) { background-image: url('images/desktop/image-deep-earth.jpg'); }
+.card:nth-child(2) { background-image: url('images/desktop/image-night-arcade.jpg'); }
+.card:nth-child(3) { background-image: url('images/desktop/image-soccer-team.jpg'); }
+.card:nth-child(4) { background-image: url('images/desktop/image-grid.jpg'); }
+.card:nth-child(5) { background-image: url('images/desktop/image-from-above.jpg'); }
+.card:nth-child(6) { background-image: url('images/desktop/image-pocket-borealis.jpg'); }
+.card:nth-child(7) { background-image: url('images/desktop/image-curiosity.jpg'); }
+.card:nth-child(8) { background-image: url('images/desktop/image-fisheye.jpg'); }
 
-.card:nth-child(3) {
-    background-image: url('images/desktop/image-soccer-team.jpg');
-}
+.boton-ver-mas-card-desk a { display: block; }
+.boton-ver-mas-card-mobile a { display: none; }
 
-.card:nth-child(4) {
-    background-image: url('images/desktop/image-grid.jpg');
-}
-
-.card:nth-child(5) {
-    background-image: url('images/desktop/image-from-above.jpg');
-}
-
-.card:nth-child(6) {
-    background-image: url('images/desktop/image-pocket-borealis.jpg');
-}
-
-.card:nth-child(7) {
-    background-image: url('images/desktop/image-curiosity.jpg');
-}
-
-.card:nth-child(8) {
-    background-image: url('images/desktop/image-fisheye.jpg');
-}
-
-/* FOOTER ---------------------------*/
-
+/* FOOTER */
 .footer {
     background-color: black;
 }
@@ -299,9 +226,8 @@ ul.listado-op {
 ul.listado-op li a {
     color: var(--color-letra);
     text-decoration: none;
-    font-family: var(--font-family-letra-uno);
+    font-family: var(--font-family-letra);
     font-weight: 400;
-    font-style: normal;
 }
 
 ul.listado-op li a:hover {
@@ -323,17 +249,64 @@ ul.listado-op li a:hover {
 
 .copyright p {
     color: var(--color-letra);
-    font-family: var(--font-family-letra-uno);
+    font-family: var(--font-family-letra);
     opacity: 0.5;
 }
 
+.close-menu {
+    display: none;
+    position: fixed;
+    top: 40px;
+    right: 20px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+    z-index: 1001;
+}
 
-
-
-/* MEDIA QUERYS -------------------------------  */
-
-
+/* === MEDIA QUERIES UNIFICADAS === */
 @media (max-width: 768px) {
+    .hamburger-menu { display: flex; }
+
+    .hamburger-menu.active .bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .hamburger-menu.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger-menu.active .bar:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        background-color: black;
+        height: 100vh;
+        justify-content: center;
+        align-items: flex-start;
+        padding-left: 20px;
+    }
+
+    nav ul.active { display: flex; }
+
+    nav li {
+        margin: 0;
+        padding: 1rem;
+        text-align: center;
+        border-bottom: 1px solid #333;
+    }
+
+    .contenedor-texto-tit { max-width: 50%; }
+    h1.titulo-banner { font-size: 20px; }
+
     .contenedor-seccion-informativa {
         flex-direction: column;
         padding: 2rem;
@@ -341,9 +314,7 @@ ul.listado-op li a:hover {
         align-items: center;
     }
 
-    .cont-background-imagen {
-        padding: 8rem;
-    }
+    .cont-background-imagen { padding: 8rem; }
 
     .cont-texto-informativo {
         position: static;
@@ -351,82 +322,62 @@ ul.listado-op li a:hover {
         text-align: center;
     }
 
-    .cont-texto-informativo h2 {
-        font-size: 33px;
+    .cont-texto-informativo h2 { font-size: 33px; }
+
+    .boton-ver-mas-card-desk a { display: none; }
+    .boton-ver-mas-card-mobile a {
+        display: block;
+        width: max-content;
     }
 
-    .cont-cards {
-        grid-template-columns: auto;
-    }
-
-    .card {
-
-        max-width: 654PX;
-        height: 240px;
-    }
-
-
-    .card:nth-child(1) {
-        background-image: url('images/mobile/image-deep-earth.jpg');
-    }
-
-    .card:nth-child(2) {
-        background-image: url('images/mobile/image-night-arcade.jpg');
-    }
-
-    .card:nth-child(3) {
-        background-image: url('images/mobile/image-soccer-team.jpg');
-    }
-
-    .card:nth-child(4) {
-        background-image: url('images/mobile/image-grid.jpg');
-    }
-
-    .card:nth-child(5) {
-        background-image: url('images/mobile/image-from-above.jpg');
-    }
-
-    .card:nth-child(6) {
-        background-image: url('images/mobile/image-pocket-borealis.jpg');
-    }
-
-    .card:nth-child(7) {
-        background-image: url('images/mobile/image-curiosity.jpg');
-    }
-
-    .card:nth-child(8) {
-        background-image: url('images/mobile/image-fisheye.jpg');
-    }
-    .contenedor-seccion-cards{
+    .contenedor-seccion-cards {
         padding: 2rem;
-    }
-    .cont-titulo-boton{
-        gap: 10px;
-    }
-
-    .contenedor-seccion-cards h2{
-        font-size: 36px;
-        text-align: center;
-    }
-}
-
-
-@media (max-width: 768px),
-(max-width: 576px) {
-    .cont-izq-footer {
+        gap: 1rem;
         align-items: center;
     }
 
-    ul.listado-op {
+    .cont-titulo-boton {
         flex-direction: column;
+        align-items: center;
+        gap: 20px;
     }
 
+    .cont-titulo-boton h2 {
+        font-size: 32px;
+        text-align: center;
+    }
+
+    .cont-cards {
+        grid-template-columns: 1fr;
+        gap: 15px;
+        width: 100%;
+    }
+
+    .card {
+        max-width: 100%;
+        height: 120px;
+    }
+
+    .card h3 {
+        font-size: 20px;
+        width: 70%;
+    }
+
+    .cont-izq-footer { align-items: center; }
+    ul.listado-op { flex-direction: column; }
     .contendor-footer {
         flex-direction: column;
         gap: 40px;
     }
+    .logos-redes { justify-content: center; }
+}
 
-    .logos-redes {
-        justify-content: center;
+@media (max-width: 576px) {
+    .cont-izq-footer { align-items: center; }
+    .ul.listado-op { flex-direction: column; }
+    .contendor-footer {
+        flex-direction: column;
+        gap: 40px;
     }
+    .logos-redes { justify-content: center; }
 }
