--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 
 :root {
-  --color-letra: white;
-  --font-family-letra: "Alata", sans-serif;
+  --color-letra: #ffffff;
+  --color-hover: #872d8c;
+  --color-footer: #000000;
+  --font-alata: "Alata", sans-serif;
+  --font-josefin: "Josefin Sans", sans-serif;
+  --font-size-titulo: 40px;
+  --font-size-subtitulo: 30px;
+  --font-size-nav: 16px;
+  --font-size-banner: 49px;
+  --font-size-movil-banner: 33px;
+  --font-weight-light: 200;
+  --font-weight-regular: 300;
+  --line-height-regular: 1.3;
+  --padding-global: 7rem;
+  --gap-standard: 20px;
 }
 
 * {
@@ -29,8 +42,9 @@ ul {
 
 li a {
   text-decoration: none;
-  color: #ffffff;
-  font-family: var(--font-family-letra);
+  color: var(--color-letra);
+  font-family: var(--font-alata);
+  font-size: var(--font-size-nav);
 }
 
 li a:hover {
@@ -44,26 +58,25 @@ li a:hover {
   background-position: center;
   width: 100%;
   padding: 70px 20px;
-  color: white;
+  color: var(--color-letra);
   position: relative;
   height: 100vh;
 }
 
 .contenedor-texto-tit {
-  border: 1px solid #ffff;
+  border: 1px solid var(--color-letra);
   padding: 20px;
   position: absolute;
   top: 40%;
   left: 10%;
   width: auto;
-  /* max-width: 38%; */
 }
 
 h1.titulo-banner {
-  font-size: 49px;
-  line-height: 1.3;
-  font-weight: 200;
-  font-family: "Josefin Sans", sans-serif;
+  font-size: var(--font-size-banner);
+  line-height: var(--line-height-regular);
+  font-weight: var(--font-weight-light);
+  font-family: var(--font-josefin);
 }
 
 .hamburger-menu {
@@ -76,15 +89,14 @@ h1.titulo-banner {
 .hamburger-menu .bar {
   width: 25px;
   height: 3px;
-  background-color: white;
+  background-color: var(--color-letra);
   margin: 4px 0;
   transition: 0.4s;
 }
 
-/* SECCIÓN IMAGEN */
 .contenedor-seccion-informativa {
   margin: 0 auto;
-  padding: 7rem;
+  padding: var(--padding-global);
   position: relative;
   display: flex;
 }
@@ -110,26 +122,25 @@ h1.titulo-banner {
   left: 54%;
   top: 48%;
   text-align: left;
-  background: #ffffff;
+  background: var(--color-letra);
   gap: 10px;
 }
 
 .cont-texto-informativo h2 {
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 300;
-  font-size: 40px;
+  font-family: var(--font-josefin);
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-titulo);
   opacity: 0.8;
 }
 
 .cont-texto-informativo p {
-  font-family: "Alata";
+  font-family: var(--font-alata);
   opacity: 0.6;
   line-height: 25px;
 }
 
-/* CARDS */
 .contenedor-seccion-cards {
-  padding: 7rem;
+  padding: var(--padding-global);
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -143,14 +154,14 @@ h1.titulo-banner {
 }
 
 .contenedor-seccion-cards h2 {
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 300;
-  font-size: 40px;
+  font-family: var(--font-josefin);
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-titulo);
 }
 
 .boton-ver-mas-card-desk a,
 .boton-ver-mas-card-mobile a {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: var(--font-josefin);
   text-decoration: none;
   color: black;
   border: 2px solid black;
@@ -180,43 +191,20 @@ h1.titulo-banner {
 }
 
 .card h3 {
-  font-size: 30px;
-  color: white;
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 200;
+  font-size: var(--font-size-subtitulo);
+  color: var(--color-letra);
+  font-family: var(--font-josefin);
+  font-weight: var(--font-weight-light);
 }
 
-.card:nth-child(1) {
-  background-image: url("images/desktop/image-deep-earth.jpg");
-}
-
-.card:nth-child(2) {
-  background-image: url("images/desktop/image-night-arcade.jpg");
-}
-
-.card:nth-child(3) {
-  background-image: url("images/desktop/image-soccer-team.jpg");
-}
-
-.card:nth-child(4) {
-  background-image: url("images/desktop/image-grid.jpg");
-}
-
-.card:nth-child(5) {
-  background-image: url("images/desktop/image-from-above.jpg");
-}
-
-.card:nth-child(6) {
-  background-image: url("images/desktop/image-pocket-borealis.jpg");
-}
-
-.card:nth-child(7) {
-  background-image: url("images/desktop/image-curiosity.jpg");
-}
-
-.card:nth-child(8) {
-  background-image: url("images/desktop/image-fisheye.jpg");
-}
+.card:nth-child(1) { background-image: url("images/desktop/image-deep-earth.jpg"); }
+.card:nth-child(2) { background-image: url("images/desktop/image-night-arcade.jpg"); }
+.card:nth-child(3) { background-image: url("images/desktop/image-soccer-team.jpg"); }
+.card:nth-child(4) { background-image: url("images/desktop/image-grid.jpg"); }
+.card:nth-child(5) { background-image: url("images/desktop/image-from-above.jpg"); }
+.card:nth-child(6) { background-image: url("images/desktop/image-pocket-borealis.jpg"); }
+.card:nth-child(7) { background-image: url("images/desktop/image-curiosity.jpg"); }
+.card:nth-child(8) { background-image: url("images/desktop/image-fisheye.jpg"); }
 
 .boton-ver-mas-card-desk a {
   display: block;
@@ -226,9 +214,8 @@ h1.titulo-banner {
   display: none;
 }
 
-/* FOOTER */
 .footer {
-  background-color: black;
+  background-color: var(--color-footer);
 }
 
 .contendor-footer {
@@ -243,41 +230,43 @@ h1.titulo-banner {
 .cont-izq-footer {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: var(--gap-standard);
+  align-items: center;
 }
 
 ul.listado-op {
   display: flex;
-  gap: 20px;
+  gap: var(--gap-standard);
+  flex-direction: column;
 }
 
 ul.listado-op li a {
   color: var(--color-letra);
   text-decoration: none;
-  font-family: var(--font-family-letra);
+  font-family: var(--font-alata);
   font-weight: 400;
 }
 
 ul.listado-op li a:hover {
-  border-bottom: 2px solid #872d8c;
+  border-bottom: 2px solid var(--color-hover);
 }
 
 .cont-der-footer {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: var(--gap-standard);
 }
 
 .logos-redes {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 15px;
 }
 
 .copyright p {
   color: var(--color-letra);
-  font-family: var(--font-family-letra);
+  font-family: var(--font-alata);
   opacity: 0.5;
 }
 
@@ -291,14 +280,13 @@ ul.listado-op li a:hover {
   height: 30px;
   position: fixed;
   left: 90%;
-  right: 0;
   font-size: 30px;
-  color: white;
+  color: var(--color-letra);
   cursor: pointer;
   z-index: 1001;
 }
 
-/* -------------------------------------------------- MEDIA QUERIES ------------------------------------------- */
+/* MEDIA QUERIES */
 @media (max-width: 768px) {
   .hamburger-menu {
     display: flex;
@@ -334,26 +322,15 @@ ul.listado-op li a:hover {
   nav ul.active {
     display: flex;
   }
+
   nav {
     padding: 0;
   }
+
   .li-links a {
     font-size: 50px;
-    font-weight: 200;
-    font-family: "Josefin Sans", sans-serif;
-  }
-  .close-menu {
-    justify-content: right;
-  }
-
-  /* nav li {
-        margin: 0;
-        padding: 1rem;
-        text-align: center;
-        border-bottom: 1px solid #333;
-    } */
-  img.logo-loopstudio {
-    z-index: 1001;
+    font-weight: var(--font-weight-light);
+    font-family: var(--font-josefin);
   }
 
   .contenedor-imagen-fondo {
@@ -383,7 +360,7 @@ ul.listado-op li a:hover {
   }
 
   .cont-texto-informativo h2 {
-    font-size: 33px;
+    font-size: var(--font-size-movil-banner);
   }
 
   .boton-ver-mas-card-desk a {
@@ -404,11 +381,11 @@ ul.listado-op li a:hover {
   .cont-titulo-boton {
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: var(--gap-standard);
   }
 
   .cont-titulo-boton h2 {
-    font-size: 32px;
+    font-size: var(--font-size-movil-banner);
     text-align: center;
   }
 
@@ -428,33 +405,12 @@ ul.listado-op li a:hover {
     width: 70%;
   }
 
-  .cont-izq-footer {
-    align-items: center;
-  }
-
-  ul.listado-op {
-    flex-direction: column;
-  }
-
-  .contendor-footer {
-    flex-direction: column;
-    gap: 40px;
-  }
-
   .logos-redes {
     justify-content: center;
   }
 }
 
 @media (max-width: 576px) {
-  .cont-izq-footer {
-    align-items: center;
-  }
-
-  .ul.listado-op {
-    flex-direction: column;
-  }
-
   .contendor-footer {
     flex-direction: column;
     gap: 40px;
