--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ ul {
   align-items: center;
 }
 
+
 li.li-links a {
   text-decoration: none;
   color: #ffffff;
@@ -318,7 +319,8 @@ ul.listado-op li a {
 
 
 
-.li-links-footer a::after, a.link-redes-sociales::after{
+.li-links-footer a::after,
+a.link-redes-sociales::after {
   content: '';
   display: block;
   position: absolute;
@@ -326,12 +328,13 @@ ul.listado-op li a {
   background-color: white;
   height: 2px;
   opacity: 0;
-  transition: all 500ms ease;
+  /* transition: all 500ms ease; */
 
 
 }
 
-.li-links-footer a:hover::after, a.link-redes-sociales:hover::after{
+.li-links-footer a:hover::after,
+a.link-redes-sociales:hover::after {
   opacity: 1;
 }
 
@@ -350,15 +353,18 @@ ul.listado-op li a {
   justify-content: flex-end;
   gap: 15px;
 }
-.link-redes-sociales{
+
+.link-redes-sociales {
   cursor: pointer;
 
 }
-.link-redes-sociales img{
+
+.link-redes-sociales img {
   max-width: 30px;
   width: 100%;
   height: 30px;
 }
+
 .copyright p {
   color: var(--color-letra);
   font-family: var(--font-family-alata);
@@ -440,12 +446,16 @@ ul.listado-op li a {
 
   .contenedor-imagen-fondo {
     background-image: url("images/mobile/image-hero.jpg");
+    height: 1300px;
+    max-width: 750px;
   }
 
   .contenedor-texto-tit {
-    max-width: 66%;
+    max-width: 88%;
     top: 30%;
+    left: 5%;
   }
+ 
 
   .contenedor-seccion-informativa {
     flex-direction: column;
